# cloud-gateway

./: Cargo.toml  Dockerfile  clippy.toml  config.yaml  rustfmt.toml
docker/: docker-compose.yaml
docker/config-repo/: application.yaml
src/: gateway.rs  gateway_metrics.rs  main.rs  responder.rs
src/gateway/: bodies.rs  config.rs  config_loader.rs  errors.rs  eureka.rs  filters.rs  predicates.rs  route.rs  spring_config_loader.rs
src/gateway/bodies/: pinned_body.rs  single_chunk_body.rs
src/gateway/filters/: add_request_header.rs  add_request_headers_if_not_present.rs  add_request_parameter.rs
src/gateway/predicates/: cookie.rs  header.rs  host.rs  method.rs  path.rs  query_param.rs  remote_addr.rs  x_forwarded_remote_addr.rs
