[package]
name = "cloud-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10.5"
http = "1.1.0"
tokio = { version = "1.38", features = ["full"] }
hyper = { version = "1.3.1", features = ["client", "http1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
serde_yaml = "0.9.34+deprecated"
async-trait = "0.1.80"
form_urlencoded = "1.2.1"