bench = []
test = []
example = []

[profile.release]
debug = true

[[bin]]
path = "src/main.rs"
name = "cloud-gateway"
plugin = false
proc-macro = false
edition = "2021"
required-features = []

[package]
name = "cloud-gateway"
edition = "2021"
version = "0.0.1"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
bytes = "1.6.0"
form_urlencoded = "1.2.1"
http = "1.1.0"
http-body-util = "0.1"
once_cell = "1.19.0"
regex = "1.10.5"
serde_json = "1.0"
serde_yaml = "0.9.33"
pin-project-lite = "0.2"
tokio-test = "0.4.4"
env_logger = "0.11.6"
log = "0.4.22"
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.1"
reqwest = {version = "0.12.12", features = ["json"]}

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.hyper]
version = "1.3.1"
features = ["client", "http1"]

[dependencies.hyper-util]
version = "0.1"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.tokio]
version = "1.38"
features = ["full"]
